import java.io.FileNotFoundException;

public interface MainMenu {


    void search() throws FileNotFoundException;

    public void displayMyWatced_file();

    public void displayMySaved_file();
}
