public interface MediaFunctions
{
    public void play(Media media);


}
