@startuml
'https://plantuml.com/class-diagram
!pragma layout smetana

Main <|-- RunProgram
Main : RunProgram();

RunProgram <|--StartMenu
RunProgram : startMenu();

StartMenu : startMenu();

StartMenu --|> User
MainMenu<|-- User
User <|-- Media

User : getUser();
User : #userName
User : #password

interface mediaFunctions
abstract class Media
Class Movies
Class Series
Class Categories

Movies : String name
Movies : int rating
Movies : boolean hasWatched
Movies : getName()
Movies : getRating()
Movies : getRating()

Series : String name
Series : int episode
Series : int season
Series : int rating
Series : boolean hasWatched
Series : getName()
Series : getSeason()
Series : getRating()
Series : getEpisode()



Media : name
Media : rating
Media : releaseYear
Media : genre
Media : play();
Media : stop();
Media : deleteFromSaved();
Media : save();

Categories : ArrayList<Movies>
Categories : ArrayList<Series>

Categories <|--Movies
Categories <|--Series

mediaFunctions : play();
mediaFunctions : stop();
mediaFunctions : deleteFromSaved()
mediaFunctions : saveMovie();
mediaFunctions : saveSeries();




mediaFunctions --|> Media

interface MainMenu
MainMenu : search();
MainMenu : searchAllInCat();
MainMenu : displayMyWatched();
MainMenu : displayMySaved();
MainMenu : getOptions();



FileIO : readData();
FileIO : writeData();

RunProgram <|-- FileIO
Media <|--Categories
FileIO <|-- Media



@enduml